# sparse-solver-rs

./: Cargo.toml  README.md
onemkl_sparse_solver_sys/: Cargo.toml
onemkl_sparse_solver_sys/src/: lib.rs  rci.rs
pardiso/: Cargo.toml
pardiso/src/: pardiso.rs  sparse_qr.rs
sparse-solver/: Cargo.toml
sparse-solver/src/: qr.rs
sparse-solver/src/qr/: ndarray.rs  sprs.rs  vec.rs
